# msme-growth-os

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/docs/: backend-architecture.md
backend/src/msme_growth_os/: __init__.py  main.py
backend/src/msme_growth_os/ai/: __init__.py
backend/src/msme_growth_os/ai/agents/: __init__.py  base.py  compliance_agent.py  crm_agent.py  finance_agent.py  inventory_agent.py  registry.py  supplier_agent.py
backend/src/msme_growth_os/ai/decision_engine/: __init__.py  ceo_recommendation_engine.py  engine.py  orchestrator.py
backend/src/msme_growth_os/ai/graphs/: __init__.py  recommendation_graph.py  service.py  state.py
backend/src/msme_growth_os/application/: composition.py
backend/src/msme_growth_os/application/use_cases/: __init__.py  generate_recommendations.py
backend/src/msme_growth_os/core/: config.py  errors.py
backend/src/msme_growth_os/domain/models/: __init__.py  business.py  compliance.py  crm.py  finance.py  inventory.py  orchestration.py  recommendation.py  supplier.py
backend/src/msme_growth_os/domain/repositories/: __init__.py  business_repository.py
backend/src/msme_growth_os/infrastructure/database/: base.py  session.py
backend/src/msme_growth_os/infrastructure/database/migrations/: env.py
backend/src/msme_growth_os/infrastructure/database/models/: __init__.py  business.py  decision.py
backend/src/msme_growth_os/interfaces/api/: __init__.py  dependencies.py
backend/src/msme_growth_os/services/: ai_ceo.py
frontend/: package-lock.json  package.json
(+67 files in other folders)
